--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -37,13 +37,17 @@
 
 
     <Button
+        android:layout_below="@+id/edit"
         android:id="@+id/voice_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Settings"
         android:visibility="visible" />
 
+
+    <!--显示过程-->
     <TextView
+        android:layout_marginTop="100dp"
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
