--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,8 +13,10 @@
     </style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
+    <!--<style name="AppTheme" parent="AppBaseTheme">-->
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+    <!--</style>-->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"/>
+
 
 </resources>
