--- a/app/src/main/res/layout/history_activity.xml
+++ b/app/src/main/res/layout/history_activity.xml
@@ -1,47 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#666">
 
 
-    <Button
-
+    <TextView
         android:id="@+id/btn1"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/shape_top1"
+        android:gravity="center"
         android:text=" 关键字 1"
+        android:textColor="#fff"
+        android:textSize="16sp"
+
         android:visibility="visible" />
 
-    <Button
+    <TextView
         android:id="@+id/btn2"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
 
-        android:layout_height="wrap_content"
         android:layout_below="@id/btn1"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+
+        android:background="@drawable/shape_top2"
+        android:gravity="center"
         android:text="关键字 2"
+        android:textColor="#fff"
+        android:textSize="16sp"
+
         android:visibility="visible" />
 
-    <Button
+    <TextView
         android:id="@+id/btn3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+
         android:layout_below="@id/btn2"
         android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_top3"
+        android:gravity="center"
         android:text="关键字 3"
+        android:textColor="#fff"
+        android:textSize="16sp"
+
         android:visibility="visible" />
 
 
-    <Button
+    <TextView
         android:id="@+id/btn4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+
         android:layout_below="@id/btn3"
         android:layout_centerHorizontal="true"
+
+        android:layout_marginTop="20dp"
+        android:background="@drawable/shape_top4"
+        android:gravity="center"
         android:text="关键字4"
+        android:textColor="#fff"
+        android:textSize="16sp"
         android:visibility="visible" />
+
+    <Button
+        android:id="@+id/begin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/process"
+        android:text="" />
+
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+
+        android:visibility="gone" />
 
 
 </RelativeLayout>
