--- a/app/src/main/res/layout/history_detail_activity.xml
+++ b/app/src/main/res/layout/history_detail_activity.xml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:id="@+id/btn3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btn2"
-        android:layout_centerHorizontal="true"
-        android:text="detail"
-        android:visibility="visible" />
+    android:background="#666"
 
+    android:layout_height="match_parent">
+
+    <TextView
+
+        android:id="@+id/textbround"
+        android:layout_width="320dp"
+        android:layout_height="560dp"
+        android:layout_centerInParent="true"
+        android:background="@drawable/shape_cor_translate"></TextView>
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="300dp"
+        android:layout_height="500dp"
+        android:layout_centerInParent="true">
+
+        <TextView
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:textSize="15sp"
+            android:id="@+id/detail"
+            android:layout_width="300dp"
+            android:layout_height="500dp"
+            android:layout_below="@id/btn2"
+            android:layout_centerHorizontal="true"
+            android:text=""
+            android:visibility="visible" />
+    </ScrollView>
+
+
+    <ListView
+        android:id="@+id/id_listview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"></ListView>
 
 
 </RelativeLayout>
