--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/meeting_during"
         android:textColor="#000"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
@@ -78,13 +79,14 @@
 
     <ImageView
         android:id="@+id/little"
-        android:layout_width="130dp"
+        android:layout_width="115dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:src="@drawable/recoder_little" />
 
     <ImageView
-        android:layout_width="300dp"
+
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
