--- a/app/src/main/res/drawable/shape_cor_translate.xml
+++ b/app/src/main/res/drawable/shape_cor_translate.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 填充的颜色 -->
-    <solid android:color="#00d32f2f" />
+    <solid android:color="#aaa" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="5dip" />
