--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,23 +5,35 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/meeting_during"
-        android:textColor="#000"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:text="会议时长"
-        android:textSize="18sp"
+
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
+        android:text="会议时长"
+        android:textColor="#000"
+        android:textSize="18sp" />
+
     <TextView
-        android:layout_marginTop="50dp"
-        android:layout_centerHorizontal="true"
-        android:text="00:00"
-        android:textColor="#0093c4"
-        android:textSize="64sp"
+        android:id="@+id/meeting_during"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="30dp"
+        android:text="重点归纳"
+        android:textColor="#000"
+        android:textSize="18sp" />
+    <!--android:layout_centerHorizontal="true"-->
+    <TextView
         android:id="@+id/counter"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="00:00"
+        android:textColor="#0093c4"
+        android:textSize="64sp" />
 
     <Button
         android:id="@+id/voice_2_txt_btn"
@@ -31,11 +43,11 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="30dp"
-        android:textSize="19sp"
         android:layout_marginRight="30dp"
         android:background="@drawable/shape_cor"
         android:text="开始"
-        android:textColor="#fff" />
+        android:textColor="#fff"
+        android:textSize="19sp" />
 
     <!--android:background="@drawable/shape_cor"-->
 
@@ -67,8 +79,6 @@
         android:visibility="visible" />
 
 
-
-
     <ImageView
         android:id="@+id/recorder_bigger"
         android:layout_width="200dp"
@@ -94,27 +104,26 @@
         android:src="@drawable/join_metting" />
 
 
-
     <!--翻译-->
     <TextView
         android:id="@+id/edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
         android:layout_marginLeft="10dp"
-        android:textSize="17sp"
+        android:layout_marginTop="140dp"
+        android:text="秒记 - 会议记录的好助手"
         android:textColor="#000"
 
-        android:text="秒记 - 会议记录的好助手" />
+        android:textSize="17sp" />
 
 
     <!--显示录入过程过程-->
     <TextView
-        android:layout_marginLeft="10dp"
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="250dp"
         android:text="引擎初始化..."
         android:visibility="visible" />
