--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -5,7 +5,6 @@
     android:orientation="vertical">
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
@@ -16,14 +15,17 @@
 
     <TextView
         android:id="@+id/meeting_during"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:layout_marginTop="30dp"
+        android:background="@drawable/shape_cor_blue"
+        android:padding="5dp"
         android:text="重点归纳"
-        android:textColor="#000"
-        android:textSize="18sp" />
+        android:textColor="#fff"
+        android:textSize="13sp" />
     <!--android:layout_centerHorizontal="true"-->
     <TextView
         android:id="@+id/counter"
@@ -35,19 +37,6 @@
         android:textColor="#0093c4"
         android:textSize="64sp" />
 
-    <Button
-        android:id="@+id/voice_2_txt_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/shape_cor"
-        android:text="开始"
-        android:textColor="#fff"
-        android:textSize="19sp" />
 
     <!--android:background="@drawable/shape_cor"-->
 
@@ -78,21 +67,27 @@
         android:text="..."
         android:visibility="visible" />
 
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="230dp">
 
-    <ImageView
-        android:id="@+id/recorder_bigger"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/recorder_bigger" />
+        <ImageView
+            android:id="@+id/recorder_bigger"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/recorder_bigger" />
 
+        <ImageView
+            android:id="@+id/little"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:src="@drawable/recoder_little" />
 
-    <ImageView
-        android:id="@+id/little"
-        android:layout_width="115dp"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:src="@drawable/recoder_little" />
+    </RelativeLayout>
 
     <ImageView
 
@@ -101,7 +96,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="45dp"
-        android:src="@drawable/join_metting" />
+        android:src="@drawable/join_metting"
+        android:visibility="gone" />
 
 
     <!--翻译-->
@@ -128,4 +124,17 @@
         android:text="引擎初始化..."
         android:visibility="visible" />
 
+    <Button
+        android:id="@+id/voice_2_txt_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@drawable/shape_cor"
+        android:text="开始"
+        android:textColor="#fff"
+        android:textSize="19sp" />
 </RelativeLayout>
